API: Add send and receive endpoints
